Update estilo.css add Coolors

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -5,6 +5,7 @@
 }
 
 :root {
+    /* https://coolors.co/db2955-ececec-191102-7b904b-f3b700 */
     /* variáveis para a paleta de cores */
     --cor-titulo: #191102;
     --cor-texto: #191102; /* letra */ 
